# dcmo5

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile  project.config
documentation/: dcmo5v11.css  dcmo5v11en.html  dcmo5v11fr.html  index.html
include/: dcmo5icon.h  dcmo5rom.h  policettf.h
licence/: dcmo5v11-licence.txt
software/: blitz-mo5.fd  dctarot-mo5.k7  desassembleur-dump-patch-mo5.k7  dos-5p25-mo5.fd  glouton-memo5.rom  la-grignote2-mo5.k7  labyrinthe-mo5.k7  memory-mo5.k7  pictor-memo5.rom  puissance4-mo5.k7  yahtzee-mo5.k7
source/: dc6809emul.c  dcmo5boutons.c  dcmo5boutons.h  dcmo5devices.c  dcmo5dialog.c  dcmo5emulation.c  dcmo5global.h  dcmo5keyb.c  dcmo5keyb.h  dcmo5main.c  dcmo5msg.h  dcmo5options.c  dcmo5video.c
